// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage should have a working login button 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="loginButton"
  disabled={false}
  height="20"
  onClick={[Function]}
  style={
    Object {
      "marginTop": "1em",
    }
  }
>
  <span>
    Click Me
  </span>
</Button>
`;

exports[`LoginPage should have english text 1`] = `
<div>
  <p>
    MUSIT - The University museums IT-organisation
  </p>
  <br />
  <p>
    MUSITbasen
  </p>
  <br />
  <p>
    <a
      className="moreInfo"
      href="/moreinfo"
    >
      Use of personal information in MUSITbasen
    </a>
  </p>
</div>
`;

exports[`LoginPage should have norwegian text 1`] = `
<div>
  <p>
    MUSIT - Universitetsmuseenes IT-organisasjon
  </p>
  <br />
  <p>
    MUSITbasen
  </p>
  <br />
  <p>
    <a
      className="moreInfo"
      href="/moreinfo"
    >
      Bruk av personopplysninger i MUSITbasen
    </a>
  </p>
</div>
`;
